--- a/public/itservices.html
+++ b/public/itservices.html
@@ -367,7 +367,21 @@
       <script src="js/owl.carousel.min.js"></script>
       <script src="js/custom.js"></script>
 
-
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+   var Tawk_API = Tawk_API || {},
+     Tawk_LoadStart = new Date();
+   (function () {
+     var s1 = document.createElement("script"),
+       s0 = document.getElementsByTagName("script")[0];
+     s1.async = true;
+     s1.src = "https://embed.tawk.to/66556c9e9a809f19fb35e595/1huur0jge";
+     s1.charset = "UTF-8";
+     s1.setAttribute("crossorigin", "*");
+     s0.parentNode.insertBefore(s1, s0);
+   })();
+ </script>
+ <!--End of Tawk.to Script-->
 </body>
 
 </html>
